--- a/kidlink/templates/administration/dashboard.html
+++ b/kidlink/templates/administration/dashboard.html
@@ -8,6 +8,7 @@
     <p>This is the Administrator dashboard.</p>
     <a href="{% url 'youth_list' %}">Youth list</a>
     <a href="{% url 'youth_create' %}">Create Youth</a>
+    <a href="{% url 'youth_activity_list' %}">Youth Activities</a>
     <a href="{% url 'admin_logout' %}">Logout</a>
     </form>
   </body>
