Fixed Code and logic
-You can now add youthActivities
-Acticities,
-link youth to activities

--- a/kidlink/templates/administration/dashboard.html
+++ b/kidlink/templates/administration/dashboard.html
@@ -9,6 +9,10 @@
     <a href="{% url 'youth_list' %}">Youth list</a>
     <a href="{% url 'youth_create' %}">Create Youth</a>
     <a href="{% url 'youth_activity_list' %}">Youth Activities</a>
+    <a href="{% url 'activity_list' %}">All Activities</a>
+    <a href="{% url 'add_activity' %}">Add Activity</a>
+    <a href="{% url 'youth_activity_create' %}">Create Youth Activity</a>
+
     <a href="{% url 'admin_logout' %}">Logout</a>
     </form>
   </body>
