--- a/kidlink/templates/activities/activity_list.html
+++ b/kidlink/templates/activities/activity_list.html
@@ -1,4 +1,4 @@
-{% comment %} <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,4 +20,4 @@
     <a href="#">Add another activity </a>
     
 </body>
-</html> {% endcomment %}
+</html>
