--- a/kidlink/templates/activities/add_activity.html
+++ b/kidlink/templates/activities/add_activity.html
@@ -1,4 +1,4 @@
-{% comment %} <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Add an Activity</title>
@@ -27,4 +27,4 @@
       <button type="submit">Add an Activity</button>
     </form>
   </body>
-</html> {% endcomment %}
+</html> 
