--- a/kidlink/templates/activities/activity_update.html
+++ b/kidlink/templates/activities/activity_update.html
@@ -1,6 +1,25 @@
-<h1>Activity Form</h1>
-<form method="post">
-  {% csrf_token %} {{ form.as_p}}
-  <button type="submit">Save</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'CSS/activity.css' %}"> 
+</head>
+<body>
+
+  <div class="form-container">
+  <div class="rightPart">
+    <h1>Activity Form</h1>
+    <form method="post">
+      {% csrf_token %} {{ form.as_p}}
+      <button type="submit">Save</button>
+    </form>
 <a href="{% url 'activity_list'%}">Back to list</a>
+
+  </div>
+</div>
+  
+</body>
+</html>
