--- a/kidlink/templates/activities/activity_update.html
+++ b/kidlink/templates/activities/activity_update.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   {% load static %}
-  <link rel="stylesheet" href="{% static 'CSS/activity.css' %}"> 
+  <link rel="stylesheet" href="{% static 'CSS/form.css' %}"> 
 </head>
 <body>
 
