--- a/kidlink/templates/activities/add_activity.html
+++ b/kidlink/templates/activities/add_activity.html
@@ -1,25 +1,26 @@
+{% extends "sidebar.html" %} {% block content %}
 <!DOCTYPE html>
 <html>
   <head>
     <title>Add Activity</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'CSS/activity.css' %}">  
+    <link rel="stylesheet" href="{% static 'CSS/activity.css' %}" />
   </head>
   <body>
     <div class="form-container">
-     <div class="rightPart">
+      <div class="rightPart">
         <h1>Add an Activity</h1>
         {% if error %}
-        <p style="color: red;">{{ error }}</p>
+        <p style="color: red">{{ error }}</p>
         {% endif %}
 
         <form method="post">
-          {% csrf_token %}
-          {{ form.as_p }}
+          {% csrf_token %} {{ form.as_p }}
           <button type="submit">Add Activity</button>
         </form>
         <a href="{% url 'activity_list' %}" class="aLink">← Back to list</a>
-     </div>
+      </div>
     </div>
   </body>
 </html>
+{% endblock content %}
