--- a/kidlink/templates/administration/youth_activity_create.html
+++ b/kidlink/templates/administration/youth_activity_create.html
@@ -1,6 +1,21 @@
+{% extends "sidebar.html" %} {% block content %}
+
 <h1>Create Youth Activity</h1>
 <form method="post">
   {% csrf_token %} {{ form.as_p }}
   <button type="submit">Create Activity</button>
 </form>
 <a href="{% url 'youth_activity_list' %}">Back to Youth Activities</a>
+{% endblock content %}
+<script>
+  const form = document.querySelector("form");
+  const form = document.querySelector("form");
+  form.addEventListener("submit", (event) => {
+    const confirmation = confirm(
+      "Are you sure you want to create this activity?"
+    );
+    if (!confirmation) {
+      event.preventDefault();
+    }
+  });
+</script>
