--- a/kidlink/templates/administration/youth_form.html
+++ b/kidlink/templates/administration/youth_form.html
@@ -1,6 +1,8 @@
+{% extends "sidebar.html" %} {% block content %}
 <h1>Youth Form</h1>
 <form method="post">
   {% csrf_token %} {{ form.as_p}}
   <button type="submit">Save</button>
 </form>
 <a href="{% url 'youth_list'%}">Back to list</a>
+{% endblock content %}
