--- a/kidlink/templates/administration/youth_list.html
+++ b/kidlink/templates/administration/youth_list.html
@@ -1,3 +1,4 @@
+{% extends "sidebar.html" %} {% block content %}
 <h1>Youth List</h1>
 <a href="{% url 'youth_create' %}">add New Youth</a>
 <ul>
@@ -9,3 +10,4 @@
   </li>
   {% endfor %}
 </ul>
+{% endblock %}
