--- a/kidlink/templates/administration/login.html
+++ b/kidlink/templates/administration/login.html
@@ -1,22 +1,66 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Administrator Login</title>
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
   </head>
   <body>
-    <h1>Login</h1>
-    {% if error %}
-    <p style="color: red">{{ error }}</p>
-    {% endif %}
-    <form method="post">
-      {% csrf_token %}
-      <label for="username">Username:</label>
-      <input type="text" name="username" required /><br /><br />
+    <div class="login-container {% if error %}shake{% endif %}">
+      <div class="login-box">
+        <h1><i class="fas fa-user-shield"></i> Admin Login</h1>
 
-      <label for="password">password:</label>
-      <input type="password" name="password" required /><br /><br />
+        {% if error %}
+        <p class="error">
+          <i class="fas fa-exclamation-circle"></i> {{ error }}
+        </p>
+        {% endif %} {% if messages %}
+        <div class="messages">
+          {% for message in messages %}
+          <div class="message {{ message.tags }}">
+            <i
+              class="fas {% if message.tags == 'success' %}fa-check-circle{% elif message.tags == 'error' %}fa-times-circle{% else %}fa-info-circle{% endif %}"
+            ></i>
+            {{ message }}
+          </div>
+          {% endfor %}
+        </div>
+        {% endif %}
+        <form method="post">
+          {% csrf_token %}
 
-      <button type="submit">Login</button>
-    </form>
+          <div class="input-group">
+            <label for="username"><i class="fas fa-user"></i></label>
+            <input
+              type="text"
+              name="username"
+              placeholder="Username"
+              required
+              autofocus
+            />
+          </div>
+
+          <div class="input-group">
+            <label for="password"><i class="fas fa-lock"></i></label>
+            <input
+              type="password"
+              name="password"
+              placeholder="Password"
+              required
+            />
+          </div>
+
+          <button type="submit" class="login-btn">
+            <i class="fas fa-sign-in-alt"></i> Login
+          </button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
