--- a/kidlink/templates/sidebar.html
+++ b/kidlink/templates/sidebar.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Administrator Dashboard</title>
-    <link rel="stylesheet" href="{% static 'css/dashboard.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/sidebar.css' %}" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
