--- a/kidlink/static/CSS/sidebar.css
+++ b/kidlink/static/CSS/sidebar.css
@@ -19,15 +19,15 @@ body {
     z-index: 2000;
     background: none;
     border: none;
-    color: #2c3e50;
+    color: #000000;
     cursor: pointer;
 }
 
 /* Sidebar */
 .sidebar {
     width: 250px;
-    background-color: #2c3e50;
-    color: #ecf0f1;
+    background-color: #ffffff;
+    color: #000000;
     position: fixed;
     top: 0;
     left: 0;
@@ -40,11 +40,16 @@ body {
 
 .sidebar-header {
     padding: 20px;
-    background-color: #1a252f;
+    text-decoration: none;
+    color: #000000;
+
+
 }
 
-.sidebar-header h2 {
+.sidebar-header h2 a {
     font-size: 1.2rem;
+    text-decoration: none;
+    color: #000000;
 }
 
 /* Menu items */
@@ -65,7 +70,7 @@ body {
 
 .sidebar-menu li a {
     text-decoration: none;
-    color: #ecf0f1;
+    color: #000000;
     padding: 10px 20px;
     display: flex;
     align-items: center;
@@ -79,7 +84,7 @@ body {
 
 .sidebar-menu li a:hover,
 .sidebar-menu li.active a {
-    background-color: #34495e;
+    background-color: #85BA49;
 }
 
 /* Main content */
@@ -156,4 +161,17 @@ body {
         opacity: 1;
         transform: translateY(0);
     }
+}
+
+/* -------- Smooth Page Transitions -------- */
+
+.fade-container {
+    opacity: 0;
+    transform: translateY(5px);
+    transition: opacity 0.4s ease, transform 0.4s ease;
+}
+
+.fade-container.active {
+    opacity: 1;
+    transform: translateY(0);
 }
