--- a/kidlink/templates/institutes/add_institute.html
+++ b/kidlink/templates/institutes/add_institute.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
+{% extends "sidebar.html" %} {% block content %}
 <html>
   <head>
     <title>Add Institute</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'CSS/activity.css' %}">  
+    <link rel="stylesheet" href="{% static 'CSS/activity.css' %}" />
   </head>
   <body>
     <div class="form-container">
       <div class="rightPart">
         <h1>Add an Institute</h1>
         {% if error %}
-        <p style="color: red;">{{ error }}</p>
+        <p style="color: red">{{ error }}</p>
         {% endif %}
 
         <form method="post">
-          {% csrf_token %}
-          {{ form.as_p }}
+          {% csrf_token %} {{ form.as_p }}
           <button type="submit">Add Institute</button>
         </form>
 
@@ -24,3 +24,4 @@
     </div>
   </body>
 </html>
+{% endblock %}
