--- a/kidlink/templates/institutes/institute_list.html
+++ b/kidlink/templates/institutes/institute_list.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
+{% extends "sidebar.html" %} {% block content %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>List of Institutes</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'CSS/list.css' %}">
-    <link rel="stylesheet" href="{% static 'CSS/style.css' %}">
+    <link rel="stylesheet" href="{% static 'CSS/list.css' %}" />
+    <link rel="stylesheet" href="{% static 'CSS/style.css' %}" />
   </head>
 
   <body>
@@ -27,15 +28,23 @@
           <p class="desc"><strong>Type:</strong> {{ institute.type }}</p>
           <div class="details">
             <span><strong>Address:</strong> {{ institute.address }}</span>
-            <span><strong>Contact:</strong> {{ institute.contact_person }}</span>
+            <span
+              ><strong>Contact:</strong> {{ institute.contact_person }}</span
+            >
           </div>
           <div class="details">
             <span><strong>Phone:</strong> {{ institute.phone }}</span>
             <span><strong>Email:</strong> {{ institute.email }}</span>
           </div>
           <div class="actions">
-            <a href="{% url 'update_institute' institute.pk %}" class="edit-btn">Edit</a>
-            <a href="{% url 'delete_institute' institute.pk %}" class="delete-btn">Delete</a>
+            <a href="{% url 'update_institute' institute.pk %}" class="edit-btn"
+              >Edit</a
+            >
+            <a
+              href="{% url 'delete_institute' institute.pk %}"
+              class="delete-btn"
+              >Delete</a
+            >
           </div>
         </div>
         {% endfor %}
@@ -45,8 +54,11 @@
       {% endif %}
 
       <div class="bottom-actions">
-        <a href="{% url 'add_institute' %}" class="add-btn">+ Add another institute</a>
+        <a href="{% url 'add_institute' %}" class="add-btn"
+          >+ Add another institute</a
+        >
       </div>
     </div>
   </body>
 </html>
+{% endblock %}
