--- a/kidlink/templates/administration/youth_activity_list.html
+++ b/kidlink/templates/administration/youth_activity_list.html
@@ -19,7 +19,7 @@
       <td>{{ activity.youth }}</td>
       <td>{{ activity.participation_date }}</td>
       <td>{{ activity.notes }}</td>
-      <td>{{ activity.get_result_display }}</td>
+      <td>{{ activity.result}}</td>
     </tr>
     {% empty %}
     <tr>
