--- a/kidlink/templates/sidebar.html
+++ b/kidlink/templates/sidebar.html
@@ -94,7 +94,7 @@
       </ul>
 
       <ul class="sidebar-menu bottom">
-        <li>
+        <li class="logout">
           <a href="{% url 'admin_logout' %}">
             <i class="fas fa-sign-out-alt"></i> Logout
           </a>
