--- a/kidlink/templates/administration/youth_activity_list.html
+++ b/kidlink/templates/administration/youth_activity_list.html
@@ -1,32 +1,47 @@
-{% extends "sidebar.html" %} {% block content %}
+{% extends "sidebar.html" %} {% load static %} {% block content %}
+<link rel="stylesheet" href="{% static 'css/youth_activities.css' %}" />
 
-<h1>Activities for {{ youth.first_name }} {{ youth.last_name }}</h1>
+<div class="activities-container">
+  <div class="header-bar">
+    <h1><i class="fas fa-running"></i> Youth Activities</h1>
+    <a href="{% url 'youth_list' %}" class="btn-back">
+      <i class="fas fa-arrow-left"></i> Back to Youth List
+    </a>
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Activity</th>
-      <th>Youth</th>
-      <th>Participation Date</th>
-      <th>Notes</th>
-      <th>Result</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for activity in activities %}
-    <tr>
-      <td>{{ activity.activity }}</td>
-      <td>{{ activity.youth }}</td>
-      <td>{{ activity.participation_date }}</td>
-      <td>{{ activity.notes }}</td>
-      <td>{{ activity.result}}</td>
-    </tr>
-    {% empty %}
-    <tr>
-      <td colspan="4">No activities found.</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-<a href="{% url 'youth_list' %}">Back to Youth List</a>
-{% endblock content%}
+  {% if activities %}
+  <div class="table-wrapper">
+    <table class="activities-table">
+      <thead>
+        <tr>
+          <th><i class="fas fa-trophy"></i> Activity</th>
+          <th><i class="fas fa-user"></i> Youth</th>
+          <th><i class="fas fa-calendar-check"></i> Participation Date</th>
+          <th><i class="fas fa-sticky-note"></i> Notes</th>
+          <th><i class="fas fa-medal"></i> Result</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for activity in activities %}
+        <tr class="activity-row">
+          <td data-label="Activity">{{ activity.activity.activity_name }}</td>
+          <td data-label="Youth">
+            {{ activity.youth.first_name }} {{ activity.youth.last_name }}
+          </td>
+          <td data-label="Participation Date">
+            {{ activity.participation_date }}
+          </td>
+          <td data-label="Notes">{{ activity.notes|default:"-" }}</td>
+          <td data-label="Result">{{ activity.result|default:"-" }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+  {% else %}
+  <div class="empty-message">
+    <i class="fas fa-info-circle"></i> No activities found for this youth.
+  </div>
+  {% endif %}
+</div>
+{% endblock %}
