--- a/kidlink/templates/administration/youth_form.html
+++ b/kidlink/templates/administration/youth_form.html
@@ -1,5 +1,6 @@
 {% extends "sidebar.html" %} {% load static %} {% block content %}
 <link rel="stylesheet" href="{% static 'CSS/youth_form.css' %}" />
+<link rel="stylesheet" href="{% static 'CSS/scrollbar.css' %}" />
 
 <div class="youth-container">
   <header class="youth-header">
