--- a/kidlink/templates/youthInstitute/youth_institute_create.html
+++ b/kidlink/templates/youthInstitute/youth_institute_create.html
@@ -1,7 +1,28 @@
-{% extends "sidebar.html" %} {% block content %}
-<h1>Create Youth Institute</h1>
-<form method="POST">
-  {% csrf_token %} {{ form.as_p }}
-  <button type="submit">Create</button>
-</form>
+{% extends "sidebar.html" %} {% load static %} {% block content %}
+<link rel="stylesheet" href="{% static 'css/youth_institute_list.css' %}" />
+
+<div class="form-container">
+  <div class="header-bar">
+    <h1><i class="fas fa-plus-circle"></i> Create Youth Institute</h1>
+    <a href="{% url 'youth_institute_list' %}" class="btn-back">
+      <i class="fas fa-arrow-left"></i> Back to List
+    </a>
+  </div>
+
+  <form method="POST" class="styled-form">
+    {% csrf_token %} {% for field in form %}
+    <div class="form-group">
+      {{ field.label_tag }} {{ field }} {% if field.help_text %}
+      <small class="help-text">{{ field.help_text }}</small>
+      {% endif %} {% for error in field.errors %}
+      <span class="error">{{ error }}</span>
+      {% endfor %}
+    </div>
+    {% endfor %}
+
+    <button type="submit" class="btn-submit">
+      <i class="fas fa-check-circle"></i> Create
+    </button>
+  </form>
+</div>
 {% endblock %}
