Add scrollbar styles and enhance youth institute form UI
Included scrollbar.css in youth activity create and list templates for improved scrollbar styling. Refactored youth institute form template to add static loading, improved layout, error display, and navigation for a better user experience.

--- a/kidlink/templates/administration/youth_activity_create.html
+++ b/kidlink/templates/administration/youth_activity_create.html
@@ -1,8 +1,6 @@
-{% extends "sidebar.html" %} 
-{% load static %}
-
-{% block content %}
+{% extends "sidebar.html" %} {% load static %} {% block content %}
 <link rel="stylesheet" href="{% static 'CSS/youth_activity_create.css' %}" />
+<link rel="stylesheet" href="{% static 'CSS/scrollbar.css' %}" />
 <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
