--- a/kidlink/templates/administration/youth_activity_list.html
+++ b/kidlink/templates/administration/youth_activity_list.html
@@ -1,6 +1,6 @@
 {% extends "sidebar.html" %} {% load static %} {% block content %}
 <link rel="stylesheet" href="{% static 'css/youth_activities.css' %}" />
-
+<link rel="stylesheet" href="{% static 'css/scrollbar.css' %}" />
 <div class="activities-container">
   <div class="header-bar">
     <h1><i class="fas fa-running"></i> Youth Activities</h1>
